[package]
name = "oac_parser"
version = "0.1.0"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
edition = "2018"
description = "A parser for the documents conforming to the OpenAutoComplete spec"
readme = "README.md"
repository = "https://github.com/filalex77/oac/tree/master/parser"
license = "MIT"
keywords = ["oac", "openautocomplete", "openautocompletion"]
categories = ["parser-implementations"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
